--- a/IoC.Spring.Container/IoC.Spring.Container/Views/Home/Index.cshtml
+++ b/IoC.Spring.Container/IoC.Spring.Container/Views/Home/Index.cshtml
@@ -8,6 +8,8 @@
 </div>
 
 <div class="row">
+    @Html.ActionLink("Crear usuario", "Create", null, new { @class="btn btn-primary" })
+
     <table class="table">
         <thead class="thead-dark">
             <tr>
@@ -15,16 +17,21 @@
                 <th scope="col">Nombre</th>
                 <th scope="col">Apellido</th>
                 <th scope="col">Documento</th>
+                <th scope="col">Acciones</th>
             </tr>
         </thead>
         <tbody>
             @foreach (var usuario in Model)
             {
             <tr>
-                <th scope="row">1</th>
+                <th scope="row">@usuario.Id</th>
                 <td>@usuario.Nombre</td>
                 <td>@usuario.Apellido</td>
                 <td>@usuario.Documento</td>
+                <td>
+                    @Html.ActionLink("Editar", "Edit", new { id = usuario.Id }, new { @class = "btn btn-secondary" })
+                    @Html.ActionLink("Borrar", "Delete", new { id = usuario.Id }, new { @class = "btn btn-danger" })
+                </td>
             </tr>
             }
         </tbody>
